--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "next": "10.2.0",
     "next-images": "^1.7.0",
     "polished": "^4.2.2",
