--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "template-initial-config-next-ts-eslint-prettier",
+  "name": "Portifolio_Next",
   "version": "1.0",
   "private": true,
-  
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
     "next": "10.2.0",
@@ -37,13 +36,15 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-    
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  }
-  
+  },
+  "main": "index.js",
+  "repository": "https://github.com/felipeholanda2077/Portifolio_Next.git",
+  "author": "felipeholanda2077 <felipe_holandafreitas@hotmail.com>",
+  "license": "MIT"
 }
