--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Portifolio_Next",
   "version": "1.0",
-  "author": "Keet Sugathadasa",
+  "author": "Felipe Holanda",
   "email": "email",
   "license": "MIT",
   "version": "0.0.1",
