--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "Portifolio_Next",
+  "name": "template-initial-config-next-ts-eslint-prettier",
   "version": "1.0",
-  "author": "Felipe Holanda",
-  "email": "email",
-  "license": "MIT",
-  "version": "0.0.1",
   "private": true,
+  "description": "Template inicial para projetos com NextJS, Typescript, Eslint, Prettier e Styled Components",
+  "main": "index.js",
+  
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.7.0",
     "next": "10.2.0",
     "next-images": "^1.7.0",
     "polished": "^4.2.2",
