--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "sweetalert2": "^11.7.0"
   },
   "devDependencies": {
     "@types/node": "^15.3.0",
