--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@vercel/analytics": "^0.1.8",
     "next": "10.2.0",
     "next-images": "^1.7.0",
     "polished": "^4.2.2",
